--- a/mystyle.css
+++ b/mystyle.css
@@ -13,6 +13,7 @@ font-family: 'Lobster', cursive;
  body{
        color: white;
        font-family: 'Oswald', sans-serif;
+       background: #234769;
  }
  img {
       margin: 40px 0px 0px 0px;
