--- a/mystyle.css
+++ b/mystyle.css
@@ -13,7 +13,7 @@ font-family: 'Lobster', cursive;
  body{
        color: white;
        font-family: 'Oswald', sans-serif;
-       background: #234769;
+       background: rgb(25,71,105);
  }
  img {
       margin: 40px 0px 0px 0px;
