--- a/mystyle.css
+++ b/mystyle.css
@@ -29,4 +29,9 @@ font-family: 'Lobster', cursive;
     a {
       color: white;
     }
+  article {
+      max-width: 500px;
+      padding: 20px;
+      margin: 0 auto;
+    }
  
