--- a/mystyle.css
+++ b/mystyle.css
@@ -6,7 +6,7 @@
     }
  h1 {
    text-align: center;
-   font-family: 'Righteous', cursive;
+   font-family: 'Lobster', cursive;
     }  
 h2 {
 font-family: 'Lobster', cursive;
