--- a/mystyle.css
+++ b/mystyle.css
@@ -1,6 +1,6 @@
   header {
       text-align: center;
-      background: url('');
+      background: url('https://lh3.google.com/u/0/d/0BxdNWwxCXD0FcXdNVmwwbVh6RXc=w1680-h827-iv1');
       background-size: cover;
       color: white;
     }
