--- a/mystyle.css
+++ b/mystyle.css
@@ -1,6 +1,6 @@
   header {
       text-align: center;
-      background: url("images/wave.jpg");
+      background: url("images/wave2.jpg");
       background-size: cover;
       color: white;
     }
