--- a/mystyle.css
+++ b/mystyle.css
@@ -1,9 +1,8 @@
   header {
       text-align: center;
-      background: url("images/wave2.jpg") 
+      background: url('iamges/wave2.jpg');
       background-size: cover;
       color: white;
-      width: 500;
     }
  h1 {
    text-align: center;
