--- a/mystyle.css
+++ b/mystyle.css
@@ -1,6 +1,6 @@
   header {
       text-align: center;
-      background: url('iamges/wave2.jpg');
+      background: url('images/wave2.jpg');
       background-size: cover;
       color: white;
     }
