--- a/mystyle.css
+++ b/mystyle.css
@@ -1,6 +1,6 @@
   header {
       text-align: center;
-      background: url('images/wave2.jpg');
+      background: url('https://lh3.google.com/u/0/d/0BxdNWwxCXD0FNTZUeFZ0MXlrZkU=w1680-h888-iv2');
       background-size: cover;
       color: white;
     }
