--- a/mystyle.css
+++ b/mystyle.css
@@ -35,4 +35,13 @@ font-family: 'Lobster', cursive;
       padding: 20px;
       margin: 0 auto;
     }
+ @media (max-width: 500px) {
+      h1 {
+        font-size: 36px;
+        padding: 5px;
+      }
+      li {
+        padding: 5px;
+        display: block;
+      }
  
