--- a/mystyle.css
+++ b/mystyle.css
@@ -9,6 +9,7 @@
     }
     h1 {
       font-size: 70px;
+       font-family: 'Lobster', cursive;
     }
     img {
       margin: 40px 0px 0px 0px;
@@ -28,8 +29,11 @@
       padding: 20px;
       margin: 0 auto;
     }
+   h2 {
+      font-family: 'Oswald', sans-serif;
+}
 body {
- background: (35,71,105);  
+ background: rgb(35,71,105);  
 }
 @media (max-width: 500px) {
       h1 {
