--- a/mystyle.css
+++ b/mystyle.css
@@ -10,6 +10,7 @@
     h1 {
       font-size: 70px;
        font-family: 'Lobster', cursive;
+       text-align: center;
     }
     img {
       margin: 40px 0px 0px 0px;
