--- a/mystyle.css
+++ b/mystyle.css
@@ -31,11 +31,12 @@
       margin: 0 auto;
     }
    h2 {
-      font-family: 'Oswald', sans-serif;
+      font-family: 'Lobster', cursive;
 }
 body {
  background: rgb(35,71,105);
    color: white;
+   font-family: 'Oswald', sans-serif;
 }
 @media (max-width: 500px) {
       h1 {
